# OPENGRADIENT_SHIELD

./: AGENTS.md  README.md
backend/: .gitignore  main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/app/: globals.css  page.tsx
