[project]
name = "opengradient-shield-backend"
version = "0.1.0"
description = "Token Security Auditor powered by OpenGradient"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "opengradient>=0.1.0",
    "uvicorn>=0.42.0",
    "python-dotenv>=1.0.0",
    "web3>=6.0.0",
    "httpx>=0.27.0"
]
